// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <div
    data-stylename="formWrapper"
  >
    <h1
      data-stylename="title"
    >
      Sign in to Hylo
    </h1>
    <TextInput
      aria-label="email"
      autoFocus={true}
      data-stylename="field"
      id="email"
      internalLabel="Email"
      label="email"
      name="email"
      onChange={[Function]}
      type="email"
      value=""
    />
    <TextInput
      aria-label="password"
      data-stylename="field"
      id="password"
      internalLabel="Password"
      label="password"
      name="password"
      onChange={[Function]}
      onEnter={[Function]}
      type="password"
      value=""
    />
    <Link
      data-stylename="forgot-password"
      to="/reset-password"
    >
      <span
        data-stylename="forgot-password"
      >
        Forgot password?
      </span>
    </Link>
    <Button
      data-stylename="submit"
      label="Sign in"
      onClick={[Function]}
    />
  </div>
  <div
    data-stylename="auth-buttons"
  >
    <FacebookButton
      onClick={[Function]}
    />
    <FacebookButton
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`renders correctly with mobile redirect 1`] = `
<div>
  <div
    data-stylename="formWrapper"
  >
    <DownloadAppPortal
      url="some.url"
    />
    <h1
      data-stylename="title"
    >
      Sign in to Hylo
    </h1>
    <TextInput
      aria-label="email"
      autoFocus={true}
      data-stylename="field"
      id="email"
      internalLabel="Email"
      label="email"
      name="email"
      onChange={[Function]}
      type="email"
      value=""
    />
    <TextInput
      aria-label="password"
      data-stylename="field"
      id="password"
      internalLabel="Password"
      label="password"
      name="password"
      onChange={[Function]}
      onEnter={[Function]}
      type="password"
      value=""
    />
    <Link
      data-stylename="forgot-password"
      to="/reset-password"
    >
      <span
        data-stylename="forgot-password"
      >
        Forgot password?
      </span>
    </Link>
    <Button
      data-stylename="submit"
      label="Sign in"
      onClick={[Function]}
    />
  </div>
  <div
    data-stylename="auth-buttons"
  >
    <FacebookButton
      onClick={[Function]}
    />
    <FacebookButton
      onClick={[Function]}
    />
  </div>
</div>
`;
